<resources>
    <string name="app_name">My App demo</string>
    <string name="onItem">OnItemClick</string>
    <string name="del">Delete Button</string>
    <string name="city">City</string>
    <string name="pincode">Pincode</string>
    <string name="addCity">Add<br>City</br></string>
    <string name="toastAddCity">Enter City and Pincode</string>
    <string name="lToString">%l</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_ans">=</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="result">Result</string>
    <string name="clear">AC</string>
    <string name="sum">+</string>
    <string name="sub">-</string>
    <string name="mul">x</string>
    <string name="div">/</string>
    <string name="mod">mod</string>
    <string name="pow">^</string>
    <string name="percent">%</string>
    <string name="error">ERROR</string>

</resources>